--- a/_includes/googlemap.html
+++ b/_includes/googlemap.html
@@ -1,13 +1,12 @@
 {% if site.map_location %}
-<script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript">
 //<![CDATA[
-var geocoder = new google.maps.Geocoder();
-var address = "{{ site.map_location }}";
 var latitude;
 var longitude;
 
 function getGeocode() {
+	var geocoder = new google.maps.Geocoder();
+	var address = "{{ site.map_location }}";
 	geocoder.geocode( { 'address': address}, function(results, status) {
 		if (status == google.maps.GeocoderStatus.OK) {
     		latitude = results[0].geometry.location.lat();
@@ -18,6 +17,7 @@ function getGeocode() {
 }
 
 function initGoogleMap() {
+
 	var styles = [
 	    {
 	      stylers: [
@@ -70,7 +70,9 @@ function initGoogleMap() {
 	    map: map
 	});
 }
-google.maps.event.addDomListener(window, 'load', getGeocode);
 //]]>
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOfDlSQPEWHCoJ8kp330UjPkDnnir3Nmw&callback=getGeocode"
+  async defer>
 </script>
 {% endif %}
