--- a/css/style.scss
+++ b/css/style.scss
@@ -586,3 +586,8 @@ $news-date-text-color: #fff;
 .border {
   border: 2px solid rgb(33,33,33);
 }
+
+.gallery-image {
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
