--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,5 +1,16 @@
+{% if include.ncol == '1' %}
+{% assign class = "col-lg-12 col-sm-12 col-xs-12" %}
+{% elsif include.ncol == '2' %}
+{% assign class = "col-lg-6 col-sm-12 col-xs-12" %}
+{% elsif include.ncol == '3' %}
+{% assign class = "col-lg-4 col-sm-6 col-xs-12" %}
+{% elsif include.ncol == '4' %}
+{% assign class = "col-lg-3 col-sm-4 col-xs-6" %}
+{% else %}
+{% assign class = include.ncol %}
+{% endif %}
 {% for img in page.gallery %}
-  <div class="gallery-image col-lg-4 col-sm-6 col-xs-12">
+  <div class="gallery-image {{ class }}">
     {% include image.html img=img.file caption=img.title width="100%" %}
   </div>
 {% endfor %}
