--- a/_includes/googlemap.html
+++ b/_includes/googlemap.html
@@ -72,7 +72,6 @@ function initGoogleMap() {
 }
 //]]>
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB70P5pKNyL2UNFcC-5noOMhK7OoBeOaZo&callback=getGeocode"
-  async defer>
-</script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB70P5pKNyL2UNFcC-5noOMhK7OoBeOaZo&callback=initMap"
+  type="text/javascript"></script>
 {% endif %}
