--- a/css/style.scss
+++ b/css/style.scss
@@ -591,3 +591,11 @@ $news-date-text-color: #fff;
   padding-top: 10px;
   padding-bottom: 20px;
 }
+
+/**** iFrame settings ****/
+
+iframe {
+    display:block;
+    width:100%;
+    height:100vh;
+}
