add isoviewer demo link

--- a/_layouts/iframe.html
+++ b/_layouts/iframe.html
@@ -2,7 +2,7 @@
 <html lang="en">
   {% include head.html %}
   <body style="margin:0px;padding:0px;overflow:hidden">
-    <iframe src="http://server.kopflab.com/shiny/apps/isoviewer_temp/" frameborder="0">
+    <iframe src="{{ page.link }}" frameborder="0">
     </iframe>
   </body>
 </html>
