--- a/_layouts/iframe.html
+++ b/_layouts/iframe.html
@@ -2,7 +2,13 @@
 <html lang="en">
   {% include head.html %}
   <body style="margin:0px;padding:0px;overflow:hidden">
+
+    <script>
+    window.location = '{{ page.link }}';
+    </script>
+    <!--
     <iframe src="{{ page.link }}" frameborder="0">
     </iframe>
+    -->
   </body>
 </html>
