--- a/_layouts/class.html
+++ b/_layouts/class.html
@@ -15,6 +15,10 @@ layout: plain
   {% if page.catalog %}
   <h5><strong>Course #: </strong>{{ page.catalog }}</h5>
   {% endif %}
+
+  {% assign items = site.teaching | sort:"weight" %}
+  {% include navigation.html items = items %}
+
 {% endcapture %}
 
 {% include title.html title = title %}
