cleanup people pictures

--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -36,7 +36,8 @@ layout: plain
     {% endif %}
   </p>
 
-  {% include post_navigation.html asc = true %}
+  {% include navigation.html %}
+
 {% endcapture %}
 
 {% include title.html title = title %}
