--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -36,7 +36,9 @@ layout: plain
     {% endif %}
   </p>
 
+  {% unless page.url == '/people/you/' %}
   {% include navigation.html %}
+  {% endunless %}
 
 {% endcapture %}
 
