--- a/_includes/grid_person.html
+++ b/_includes/grid_person.html
@@ -6,6 +6,7 @@
 {% endif %}
 
 <div class="grid-item {{ person.group }}" alt="{{ person.title }}" title="{{ person.title }}">
+  <!--
   <div class="center-wrap-1"><div class="center-wrap-2"><div class="center-wrap-3">
     <div class="info">
       <a href="{{ web_url }}">
@@ -14,6 +15,7 @@
       </a>
     </div>
   </div></div></div>
+  -->
 
   <a href="{{ web_url }}" class="background">
     <div class="grid-image">
@@ -23,6 +25,14 @@
       {% if thumb_exists == 'yes' %}<img src="{{ thumb }}"/>
       {% else %}<br /><center>{{ person.title }}</center>
       {% endif %}
+    </div>
+    <div class="grid-label">
+      <div style="display: table-cell; vertical-align: middle;">
+        <div>
+          <h4>{{ person.title }}</h4>
+          <p>{{ person.position }}</p>
+        </div>
+      </div>
     </div>
   </a>
 </div>
