--- a/_layouts/resource.html
+++ b/_layouts/resource.html
@@ -3,7 +3,11 @@ layout: plain
 ---
 
 {% capture title %}
-  <h2>{{ page.title }}</h2>
+  {% if page.title_html %}
+    {{ page.title_html }}
+  {% else %}
+    <h2>{{ page.title }}</h2>
+  {% endif %}
   {% if page.subtitle %}
   <h4>{{ page.subtitle }}</h4>
   {% endif %}
@@ -23,10 +27,18 @@ layout: plain
       </span>
     </a>
     {% endif %}
+    {% if page.launch %}
+    &nbsp;|&nbsp;
+    <a href="{{ page.launch }}" target = "_new" data-toggle="tooltip"
+        data-delay='{"show": 100, "hide": 100 }' data-placement="bottom" title="Launch application">
+      <span class="fa fa-rocket"></span> Launch
+    </a>
+    {% endif %}
   </p>
   {% endif %}
 
-  {% include post_navigation.html %}
+  {% include navigation.html asc=true %}
+
 {% endcapture %}
 
 {% include title.html title = title %}
