--- a/_layouts/resource.html
+++ b/_layouts/resource.html
@@ -23,7 +23,7 @@ layout: plain
     <a href="http://www.github.com/{{ page.github }}/blob/{{ page.scad }}" target = "_new" data-toggle="tooltip"
         data-delay='{"show": 100, "hide": 100 }' data-placement="bottom" title="Open SCAD File">
       <span class="info">
-        <img src="/resources/scad.png" height="25px"/>&nbspDesign File
+        <img src="/images/resources/scad.png" height="25px"/>&nbspDesign File
       </span>
     </a>
     {% endif %}
