--- a/_includes/list_item.html
+++ b/_includes/list_item.html
@@ -1,7 +1,18 @@
 {% assign item = include.item %}
+{% if include.title %}
+  {% assign title = include.title %}
+{% else %}
+  {% assign title = item.title %}
+{% endif %}
+
+{% if item.link_external %}
+  {% assign url = item.link_external %}
+{% else %}
+  {% assign url = item.url %}
+{% endif %}
 <div class="media">
-  <h4 class="media-heading">
-    <a href="{{ item.url }}">{{ item.title }}</a>
+  <h3 class="media-heading">
+    <a href="{{ url }}">{{ title }}</a>
     {% if item.github %}
     <a href="http://www.github.com/{{ item.github }}/" target = "_new" data-toggle="tooltip"
         data-delay='{"show": 100, "hide": 100 }' data-placement="bottom" title="Show on GitHub">
@@ -14,23 +25,36 @@
       <span class="fa fa-rocket"></span>
     </a>
     {% endif %}
-  </h4>
+  </h3>
   <div class="media-body">
     {% if item.summary %}
       {{ item.summary }}
+    {% elsif include.full_text %}
+      {{ item.content }}
+      {% assign length = 0 %}
     {% else %}
       {{ item.content | strip_html | truncatewords: 60 }}
+      {% assign length = item.content | number_of_words %}
     {% endif %}
-    {% assign length = item.content | number_of_words %}
     {% if item.summary or length > 60 %}
-    <a href="{{ item.url }}"><strong>read more</strong></a>
+    <a href="{{ url }}"><strong>read more</strong></a>
     {% endif %}
   </div>
-  {% if item.picture_html %}
+  {% if include.full_text %}
+    {% assign include_picture = false %}
+  {% else %}
+    {% assign include_picture = true %}
+  {% endif %}
+
+  {% if include_picture and item.picture_html %}
     <span class="media-right">{{ item.picture_html }}</span>
-  {% elsif item.picture %}
+  {% elsif include_picture and item.picture %}
     <span class="media-right">
-      {% include image.html img=item.picture width="200px" %}
+      {% if item.caption %}
+      {% include image.html img=item.picture width="200px" caption=item.caption %}
+      {% else %}
+      {% include image.html img=item.picture width="200px" caption=item.title %}
+      {% endif %}
     </span>
   {% endif %}
 </div>
