add google analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106138361-7"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.ga }}"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
