--- a/_layouts/iframe.html
+++ b/_layouts/iframe.html
@@ -7,6 +7,7 @@
     window.location = '{{ page.link }}';
     </script>
     <!--
+    # iframe does not always work, use normal redirect
     <iframe src="{{ page.link }}" frameborder="0">
     </iframe>
     -->
